--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -1,57 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lab | Hypothesis Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Objective**\n",
-    "\n",
-    "Welcome to the Hypothesis Testing Lab, where we embark on an enlightening journey through the realm of statistical decision-making! In this laboratory, we delve into various scenarios, applying the powerful tools of hypothesis testing to scrutinize and interpret data.\n",
-    "\n",
-    "From testing the mean of a single sample (One Sample T-Test), to investigating differences between independent groups (Two Sample T-Test), and exploring relationships within dependent samples (Paired Sample T-Test), our exploration knows no bounds. Furthermore, we'll venture into the realm of Analysis of Variance (ANOVA), unraveling the complexities of comparing means across multiple groups.\n",
-    "\n",
-    "So, grab your statistical tools, prepare your hypotheses, and let's embark on this fascinating journey of exploration and discovery in the world of hypothesis testing!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Challenge 1**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this challenge, we will be working with pokemon data. The data can be found here:\n",
-    "\n",
-    "- https://raw.githubusercontent.com/data-bootcamp-v4/data/main/pokemon.csv"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "e5ac5cf1-585f-43dd-b22a-6f1e1143da4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#libraries\n",
     "import pandas as pd\n",
-    "import scipy.stats as st\n",
     "import numpy as np\n",
-    "\n"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as st"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "id": "93b12551-9a27-4930-9935-c5b7cf6fc5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CHALLENGE 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "510f8221-cae8-49c7-8d05-b6e4abcc728c",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +253,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,54 +265,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c18c940-adeb-4797-9b88-07aeeb2fa34f",
    "metadata": {},
    "source": [
-    "- We posit that Pokemons of type Dragon have, on average, more HP stats than Grass. Choose the propper test and, with 5% significance, comment your findings."
+    "We posit that Pokemons of type Dragon have, on average, more HP stats than Grass. Choose the propper test and, with 5% significance, comment your findings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "id": "e9b7460d-cc2f-4753-aa95-69e08c95d1a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.590444254130357 0.0002567969150153481\n",
+      "Reject the null hypothesis: Dragon-type Pokemon have, on average, more HP than Grass-type Pokemon.\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "dragon_hp = df[df['Type 1'] == 'Dragon']['HP']\n",
+    "grass_hp = df[df['Type 1'] == 'Grass']['HP']\n",
+    "\n",
+    "test_stat, p_value = st.ttest_ind(dragon_hp, grass_hp, alternative='greater', equal_var=True)\n",
+    "print(test_stat, p_value)\n",
+    "\n",
+    "\n",
+    "# Conclusion\n",
+    "if p_value < alpha:\n",
+    "    print(\"Reject the null hypothesis: Dragon-type Pokemon have, on average, more HP than Grass-type Pokemon.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant difference in average HP between Dragon and Grass-type Pokemon.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37e87c3-2fc8-4b2f-ac12-67c5c461f221",
+   "metadata": {},
+   "source": [
+    "We posit that Legendary Pokemons have different stats (HP, Attack, Defense, Sp.Atk, Sp.Def, Speed) when comparing with Non-Legendary. Choose the propper test and, with 5% significance, comment your findings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6a7a66d3-a19f-4e69-8c18-713b110dc680",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject the null hypothesis for HP: Significant difference in HP between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n",
+      "Reject the null hypothesis for Attack: Significant difference in Attack between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n",
+      "Reject the null hypothesis for Defense: Significant difference in Defense between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n",
+      "Reject the null hypothesis for Sp. Atk: Significant difference in Sp. Atk between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n",
+      "Reject the null hypothesis for Sp. Def: Significant difference in Sp. Def between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n",
+      "Reject the null hypothesis for Speed: Significant difference in Speed between Legendary and Non-Legendary Pokémon (p-value: 0.00000).\n"
+     ]
+    }
+   ],
+   "source": [
+    "legendary = df[df['Legendary'] == True]\n",
+    "non_legendary = df[df['Legendary'] == False]\n",
+    "\n",
+    "stats_to_compare = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "results = {}\n",
+    "\n",
+    "for stat in stats_to_compare:\n",
+    "    test_stat, p_value = st.ttest_ind(legendary[stat], non_legendary[stat], equal_var=True)\n",
+    "    results[stat] = p_value\n",
+    "\n",
+    "adjusted_alpha = 0.05 / len(stats_to_compare)\n",
+    "\n",
+    "for stat, p_value in results.items():\n",
+    "    if p_value < adjusted_alpha:\n",
+    "        print(f\"Reject the null hypothesis for {stat}: Significant difference in {stat} between Legendary and Non-Legendary Pokémon (p-value: {p_value:.5f}).\")\n",
+    "    else:\n",
+    "        print(f\"Fail to reject the null hypothesis for {stat}: No significant difference in {stat} between Legendary and Non-Legendary Pokémon (p-value: {p_value:.5f}).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55ba71bb-946d-4eb8-9043-aade0f429cf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- We posit that Legendary Pokemons have different stats (HP, Attack, Defense, Sp.Atk, Sp.Def, Speed) when comparing with Non-Legendary. Choose the propper test and, with 5% significance, comment your findings.\n"
+    "#CHALLENGE 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Challenge 2**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this challenge, we will be working with california-housing data. The data can be found here:\n",
-    "- https://raw.githubusercontent.com/data-bootcamp-v4/data/main/california_housing.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "id": "a284797a-71dd-468b-9631-c0c9d0905cb9",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +478,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,33 +489,51 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0df2e911-4299-4fc2-8533-29bcac5a1f35",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-17.174167998688404 5.220018561223529e-05\n",
+      "Reject the null hypothesis: Houses close to a school or hospital are more expensive.\n"
+     ]
+    }
+   ],
    "source": [
-    "**We posit that houses close to either a school or a hospital are more expensive.**\n",
+    "alpha = 0.05\n",
+    "school_coords = np.array([-118, 37])\n",
+    "hospital_coords = np.array([-122, 34])\n",
     "\n",
-    "- School coordinates (-118, 37)\n",
-    "- Hospital coordinates (-122, 34)\n",
+    "def euclidean_distance(x1, y1, x2, y2):\n",
+    "    return np.sqrt((x1 - x2) ** 2 + (y1 - y2) ** 2)\n",
     "\n",
-    "We consider a house (neighborhood) to be close to a school or hospital if the distance is lower than 0.50.\n",
+    "df['distance_to_school'] = euclidean_distance(df['longitude'], df['latitude'], *school_coords)\n",
+    "df['distance_to_hospital'] = euclidean_distance(df['longitude'], df['latitude'], *hospital_coords)\n",
     "\n",
-    "Hint:\n",
-    "- Write a function to calculate euclidean distance from each house (neighborhood) to the school and to the hospital.\n",
-    "- Divide your dataset into houses close and far from either a hospital or school.\n",
-    "- Choose the propper test and, with 5% significance, comment your findings.\n",
-    " "
+    "df['is_close'] = (df['distance_to_school'] < 0.50) | (df['distance_to_hospital'] < 0.50)\n",
+    "\n",
+    "close_houses = df[df['is_close']].copy()\n",
+    "far_houses = df[~df['is_close']].copy()\n",
+    "\n",
+    "test_stat, p_value = st.ttest_ind(close_houses['median_house_value'], far_houses['median_house_value'], equal_var=False)\n",
+    "print(test_stat, p_value)\n",
+    "\n",
+    "\n",
+    "# Conclusion\n",
+    "if p_value < alpha:\n",
+    "    print(\"Reject the null hypothesis: Houses close to a school or hospital are more expensive.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant difference in price between houses close to and far from a school or hospital.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "7cfc9f36-e4c1-4ad5-8732-f987cb4ed13c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -498,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -512,9 +555,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
